# chain-tx-enclave

./: .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  UpdateRustSGXSDK.mk  entrypoint.sh  make.sh
app/: Cargo.toml  build.rs
app/src/: main.rs
app/src/enclave_u/: init_enclave.rs  mod.rs
app/src/server/: mod.rs
app/src/test/: mod.rs
chain/chain-core/: Cargo.toml
chain/chain-core/src/init/: address.rs
chain/chain-tx-validation/: Cargo.toml
chain/client-rpc/src/rpc/: multisig_rpc.rs  wallet_rpc.rs
chain/enclave-protocol/: Cargo.toml
chain/enclave-protocol/src/: lib.rs
enclave/: Cargo.toml  Enclave.edl
enclave-macro/: Cargo.toml
enclave-u-common/: Cargo.toml
enclave-u-common/src/enclave_u/: mod.rs
enclave/src/: lib.rs
rust-sgx-sdk/: version
tx-query/: Makefile
tx-query/app/: Cargo.toml  build.rs
tx-query/app/src/: main.rs
tx-query/app/src/enclave_u/: mod.rs
tx-query/app/src/test/: mod.rs
tx-query/enclave/: Cargo.toml  Enclave.edl
tx-query/enclave/src/: attest.rs  cert.rs  lib.rs
tx-validation/: Dockerfile  Makefile
tx-validation/app/: Cargo.toml  build.rs
tx-validation/app/src/: main.rs
tx-validation/app/src/enclave_u/: init_enclave.rs  mod.rs
tx-validation/app/src/server/: mod.rs
tx-validation/app/src/test/: mod.rs
tx-validation/enclave/: Cargo.toml  Enclave.edl
tx-validation/enclave/src/: lib.rs
