[package]
name = "tx-validation-app"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Application server wrapper around the transaction validation enclave."
readme = "../README.md"
edition = "2018"

[dependencies]
hex = "0.3"
dirs = "1.0.2"
zmq = "0.9"
log = "0.4.0"
env_logger = "0.6.2"
sgx_types = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_urts = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
chain-core   = { git = "https://github.com/crypto-com/chain.git", rev = "62379b76c5108b6a63e78294be79915c9f8b38d5" }
chain-tx-validation   = { git = "https://github.com/crypto-com/chain.git", rev = "62379b76c5108b6a63e78294be79915c9f8b38d5" }
enclave-protocol   = { git = "https://github.com/crypto-com/chain.git", rev = "62379b76c5108b6a63e78294be79915c9f8b38d5" }
parity-codec = { version = "4.1.2" }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "ab780345c85ac2c28a4e0c08e8e18c4ecdbb1fa9", features = ["recovery", "endomorphism"] }
