[package]
name = "tx-validation-enclave"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "The transaction validation enclave."
readme = "../README.md"
edition = "2018"

[lib]
name = "txvalidationenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tse       = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tstd      = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk", features = ["net","backtrace"] }
sgx_rand      = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_trts      = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_types     = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tseal     = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tcrypto   = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
# chain-tx-validation   = { git = "https://github.com/crypto-com/chain" }
chain-core   = { path = "../chain/chain-core", default-features = false, features = ["mesalock_sgx"] }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "9dce794d1d8ce03ffa48823acf198fae15e896d3", features = ["recovery", "endomorphism", "sgx"] }
parity-codec = { default-features = false, version = "4.1.0" }
