[package]
name = "chain-core"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Library with core types and serialization for the use in external tools"
readme = "../README.md"
edition = "2018"

[features]
default = ["serde"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
digest = { version = "0.8", default-features = false}
tiny-keccak = { version = "1.5.0", default-features = false, features = ["keccak"] }
hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx.git", rev = "10618d76cc6f2aac8f356a882f1e85a1d8478998" }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "ab780345c85ac2c28a4e0c08e8e18c4ecdbb1fa9", features = ["recovery", "endomorphism", "sgx"] }
serde = { version = "1.0", features = ["derive"], optional = true }
blake2 = { version = "0.8", default-features = false }
parity-codec = { features = ["derive"], default-features = false, version = "4.1.1" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx.git", rev = "3bc16457fa44ed6f4cbc3c40804c38bde7d89e03" }
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
static_assertions = { version = "0.3.3", default-features = false}

[dev-dependencies]
serde_json = "1.0"
quickcheck = "0.8"