[package]
name = "chain-core"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Library with core types and serialization for the use in external tools"
readme = "../README.md"
edition = "2018"

[features]
default = ["serde", "bech32"]
mesalock_sgx = ["sgx_tstd"]


[dependencies]
digest = { version = "0.8", default-features = false}
tiny-keccak = { version = "1.5.0", default-features = false, features = ["keccak"] }
hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx.git", rev = "c603c9f6cd929073d5d07171dce9f7cc8524a956" }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "29991f23eaaa55ec86491dc78e7455f8f1fe3212", features = ["recovery", "endomorphism", "sgx"] }
serde = { version = "1.0", features = ["derive"], optional = true }
blake2 = { version = "0.8", default-features = false }
parity-scale-codec = { features = ["derive"], default-features = false, version = "1.0" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx.git", rev = "c2fabd15f647f7b4ad1e003b8d742ea34951dad2" }
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
static_assertions = { version = "0.3.3", default-features = false}
bech32 = { version = "0.7.1", optional = true }

[dev-dependencies]
serde_json = "1.0"
quickcheck = "0.8"