[package]
name = "chain-tx-validation"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Library with functions that verify, given current chain state's data, if a transaction is valid."
readme = "../README.md"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
chain-core = { path = "../chain-core", default-features = false, features = ["mesalock_sgx"] }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "ab780345c85ac2c28a4e0c08e8e18c4ecdbb1fa9", features = ["recovery", "endomorphism", "sgx"] }
parity-codec = { features = ["derive"], default-features = false, version = "4.1.3" }
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
