[package]
name = "enclave-protocol"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Requests and responses exchanges over ZMQ between chain-abci app "
readme = "../README.md"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
chain-core = { path = "../chain-core", default-features = false, features = ["mesalock_sgx"] }
chain-tx-validation = { path = "../chain-tx-validation", default-features = false, features = ["mesalock_sgx"] }
parity-scale-codec = { version = "1.0", default-features = false, features = ["derive"] }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "ac9843a361114b42178acc119ab77d5a149985f5", features = ["sgx"] }
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
