[package]
name = "tx-validation-app"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Application server wrapper around the transaction validation enclave."
readme = "../../README.md"
edition = "2018"

[features]
sgx-test = []

[dependencies]
sled = "0.26"
hex = "0.3"
dirs = "1.0.2"
zmq = "0.9"
log = "0.4.0"
env_logger = "0.6.2"
enclave-u-common = { path = "../../enclave-u-common" }
sgx_types = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_urts = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk" }
chain-core   = { git = "https://github.com/crypto-com/chain.git", rev = "61bf5834147afeb97f1089d26b5326a2f0fec348" }
chain-tx-validation   = { git = "https://github.com/crypto-com/chain.git", rev = "61bf5834147afeb97f1089d26b5326a2f0fec348" }
enclave-protocol   = { git = "https://github.com/crypto-com/chain.git", rev = "61bf5834147afeb97f1089d26b5326a2f0fec348" }
parity-scale-codec = { version = "1.0" }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "ac9843a361114b42178acc119ab77d5a149985f5", features = ["recovery", "endomorphism"] }
